<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    tools:context="me.hungrylove.hungryloveproject.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menu_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:padding="7dp"
            android:text="@string/menu_puchase"
            android:textColor="@color/hungryContentColor"
            android:textSize="21dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menu_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:padding="7dp"
            android:text="@string/menu_share"
            android:textColor="@color/hungryContentColor"
            android:textSize="21dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menu_author_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:padding="7dp"
            android:text="@string/menu_insta"
            android:textColor="@color/hungryContentColor"
            android:textSize="21dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/menu_get_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:padding="7dp"
            android:text="@string/menu_get_books"
            android:textColor="@color/hungryContentColor"
            android:textSize="21dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_close_area"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_close_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menu_close"
            android:textColor="@color/hungryContentColor"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
